--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "postinstall": "prisma generate"
     },
     "dependencies": {
         "@hookform/resolvers": "^3.9.0",
@@ -26,7 +27,6 @@
         "@radix-ui/react-tooltip": "^1.1.3",
         "@react-email/components": "^0.0.25",
         "@types/bcrypt": "^5.0.2",
-        "auth-provider": "^0.6.2",
         "bcrypt": "^5.1.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
